Footer - alignment fix

--- a/Styles/global.css
+++ b/Styles/global.css
@@ -382,7 +382,7 @@ strong {
 
 .website__rights {
   color:  #fff;
-  text-align: left;
+  text-align: center;
 }
 
 @media screen and (max-width: 1100px){
